--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Павел Жуков
-description: Информация и резюме Павла Жукова.
+description: Информация и резюме
 show_downloads: false
 google_analytics:
 theme: jekyll-theme-architect
