--- a/_config.yml
+++ b/_config.yml
@@ -3,3 +3,5 @@ description: Информация и резюме
 show_downloads: false
 google_analytics:
 theme: jekyll-theme-architect
+mainfont: Roboto
+monofont: Roboto
